# llm-judge

./: .gitignore  .pre-commit-config.yaml  CATEGORY_DEFINITION_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  README.md  ci_status.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  run_benchmarks.py
docs/: API.md  DEVELOPMENT.md  USAGE_GUIDE.md
examples/: README_NLG_VALIDATION.md  basic_usage.py  demo.ipynb  evaluate_summarization.py  nlg_validation_study.py  reproduce_validation.py
src/llm_judge/: __init__.py
src/llm_judge/categories/: __init__.py  registry.py
src/llm_judge/core/: __init__.py  category.py  evaluation.py  judge.py
src/llm_judge/providers/: __init__.py  anthropic.py  base.py  gemini.py  mock.py  openai.py
src/llm_judge/utils/: __init__.py  consensus.py  cost_tracker.py
tests/: test_basic.py
validation/: FINAL_VALIDATION_REPORT.md  PHASE1_COMPLETE.md  PHASES_1-3_SUMMARY.md  REPRODUCE_VALIDATION.md  phase1_summary.md
